--- a/3.html
+++ b/3.html
@@ -81,7 +81,7 @@
         <ul>
             <li>HTML, CSS, JavaScript</li>
             <li>Python, Java</li>
-            <li>Database Management (MySQL, Postgre)</li>
+            <li>Database Management (MySQL, Post)</li>
             <li>UI/UX Design (Figma, Adobe XD)</li>
         </ul>
 
