--- a/2.html
+++ b/2.html
@@ -3,82 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>College Web Page</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-        }
-        header {
-            background-color: red;
-            color: white;
-            text-align: center;
-            padding: 20px;
-            font-size: 2em;
-        }
-        nav {
-            background-color: darkblue;
-            padding: 10px;
-            text-align: center;
-        }
-        nav a {
-            color: white;
-            text-decoration: none;
-            margin: 0 15px;
-            font-size: 1.2em;
-        }
-        .container {
-            display: flex;
-            flex-wrap: wrap;
-            padding: 20px;
-        }
-        .section {
-            flex: 1;
-            min-width: 300px;
-            margin: 10px;
-            padding: 20px;
-            background-color: lightgray;
-            border-radius: 8px;
-        }
-        footer {
-            background-color: navy;
-            color: white;
-            text-align: center;
-            padding: 10px;
-            margin-top: 20px;
-        }
-    </style>
+    <title>Amal Jyothi College of Engineering</title>
 </head>
-<body>
-    <header>AMAL JYOTHI COLLEGE OF ENGINNERING</header>
-    <nav>
-        <a href="#courses">Courses</a>
-        <a href="#departments">Departments</a>
-        <a href="#faculty">Faculty</a>
-        <a href="#library">Library</a>
-        <a href="#contact">Contact Us</a>
-    </nav>
-    <div class="container">
-        <div class="section" id="courses">
-            <h2>Courses</h2>
-            <p>We offer a wide range of undergraduate and postgraduate courses in various disciplines including Science, Arts, Commerce, and Technology.</p>
-        </div>
-        <div class="section" id="departments">
-            <h2>Departments</h2>
-            <p>Our college has multiple departments such as Computer Science, Mathematics, Physics, Chemistry, and Humanities, each with experienced faculty.</p>
-        </div>
-        <div class="section" id="faculty">
-            <h2>Faculty</h2>
-            <p>Our esteemed faculty members are experts in their fields, dedicated to providing quality education and mentoring students.</p>
-        </div>
-        <div class="section" id="library">
-            <h2>Library</h2>
-            <p>Our library houses thousands of books, research papers, and digital resources, offering a quiet space for study and exploration.</p>
-        </div>
+<body style="font-family: Arial, sans-serif; background-color: #eef; color: #6e6464;">
+    <h1 style="text-align: center; color: #0056b3;">Welcome to Amal Jyothi College of Engineering</h1>
+    <hr>
+    <div style="text-align: center;">
+        <a href="https://www.amaljyothi.ac.in" target="_blank">About Us</a> | 
+        <a href="https://www.ajce.in/home/index.html" target="_blank">Courses</a> | 
+        <a href="https://www.ajce.in/home/index.html" target="_blank">Departments</a> | 
+        <a href="https://www.ajce.in/home/index.html" target="_blank">Faculty</a> | 
+        <a href="https://www.ajce.in/lib/index.html" target="_blank">Library</a> | 
+        <a href="https://www.ajce.in/home/index.html" target="_blank">Contact</a>
     </div>
-    <footer id="contact">
-        <p>Contact Us: college@example.com | Phone: (123) 456-7890</p>
-        <p>&copy; 2025 Our College. All rights reserved.</p>
-    </footer>
+    <hr>
+
+    <section id="about">
+        <h2>About Amal Jyothi College of Engineering</h2>
+        <p>Amal Jyothi College of Engineering (AJCE) is a premier institution in Kerala, known for its excellence in technical education and innovation. Established in 2001, AJCE is the first engineering college in Kerala to receive the prestigious NBA accreditation in its very first accreditation cycle.</p>
+    </section>
+
+    <section id="courses">
+        <h2>Courses Offered</h2>
+        <ul>
+            <li>B.Tech in Computer Science and Engineering</li>
+            <li>B.Tech in Electronics and Communication Engineering</li>
+            <li>B.Tech in Mechanical Engineering</li>
+            <li>B.Tech in Civil Engineering</li>
+            <li>B.Tech in Electrical and Electronics Engineering</li>
+            <li>B.Tech in Artificial Intelligence and Data Science</li>
+            <li>M.Tech in Cyber Security</li>
+            <li>M.Tech in Structural Engineering</li>
+        </ul>
+    </section>
+
+    <section id="departments">
+        <h2>Departments</h2>
+        <ul>
+            <li>Department of Computer Science</li>
+            <li>Department of Electronics and Communication</li>
+            <li>Department of Mechanical Engineering</li>
+            <li>Department of Civil Engineering</li>
+            <li>Department of Electrical and Electronics Engineering</li>
+            <li>Department of Applied Sciences</li>
+        </ul>
+    </section>
+
+    <section id="faculty">
+        <h2><center>Our Faculty</center></h2>
+        <p>AJCE boasts a team of highly qualified and experienced professors dedicated to providing world-class education and mentoring students for professional excellence.</p>
+    </section>
+
+    <section id="library">
+        <h2><center>Library</center></h2>
+        <p>The central library of Amal Jyothi College of Engineering is a hub of knowledge, equipped with an extensive collection of books, journals, digital resources, and research papers.</p>
+    </section>
+
+    <section id="contact">
+        <h2><center>Contact Us</center></h2>
+        <p>Email: <a href="mailto:info@amaljyothi.ac.in">info@amaljyothi.ac.in</a></p>
+        <p>Phone: <a href="tel:+914828259000">+91 4828 259000</a></p>
+        <p>Website: <a href="https://www.amaljyothi.ac.in" target="_blank">www.amaljyothi.ac.in</a></p>
+    </section>
+
+    <hr>
+    <p style="text-align: center;">&copy; 2025 Amal Jyothi College of Engineering. All rights reserved.</p>
 </body>
 </html>
