--- a/3.html
+++ b/3.html
@@ -1,110 +1,75 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
-<center>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Resume</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            background-color: #e6caca;
-        }
-        .container {
-            max-width: 800px;
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px gray;
-        }
-        h1, h2 {
-            color: black;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-bottom: 20px;
-        }
-        table, th, td {
-            border: 1px solid black;
-        }
-        th, td {
-            padding: 10px;
-            text-align: left;
-        }
-        ul {
-            list-style-type: square;
-        }
-        a {
-            color: darkblue;
-            text-decoration: none;
-        }
-    </style>
+    <title>Malavika Krishnan - Resume</title>
 </head>
-<body>
-    <div class="container">
-        <h1><center>My Resume</center></h1>
-        <h2>Personal Information</h2>
-        <table>
-            <tr>
-                <th>Name</th>
-                <td>Malavika Krishnan</td>
-            </tr>
-            <tr>
-                <th>Email</th>
-                <td><a href="krismaalu@gmail.com">krismaalu@gmail.com</a></td>
-            </tr>
-            <tr>
-                <th>Phone</th>
-                <td>6383679905</td>
-            </tr>
-            <tr>
-                <th>LinkedIn</th>
-                <td><a href="https://www.linkedin.com/in/malavikakrishnan30/" target="_blank">www.linkedin.com/in/malavikakrishnan30/</a></td>
-            </tr>
-        </table>
+<body style="font-family: Arial, sans-serif; background-color: #e3f2fd; color: #333; margin: 0; padding: 0;">
 
-        <h2>Education</h2>
-        <table>
-            <tr>
-                <th>Degree</th>
-                <th>Institution</th>
-                <th>Year</th>
-            </tr>
-            <tr>
-                <td>Bachelor of Science in Computer Science</td>
-                <td>Amal Jyothi College of Engineering</td>
-                <td>2024 - 2028</td>
-            </tr>
-        </table>
+    <header style="background-color: #1565c0; color: white; text-align: center; padding: 20px;">
+        <h1>Malavika Krishnan</h1>
+    </header>
 
-        <h2>Skills</h2>
-        <ul>
-            <li>HTML, CSS, JavaScript</li>
-            <li>Python, Java</li>
-            <li>Database Management (MySQL)</li>
-            <li>UI/UX Design (Figma, Adobe XD)</li>
+    <section style="padding: 20px;">
+        <h2 style="color: #1565c0;">Contact Information</h2>
+        <ul style="list-style: none; padding: 0;">
+            <li><strong>Email:</strong> <a href="mailto:krismaalu@gmail.com" style="color: #0d47a1;">krismaalu@gmail.com</a></li>
+            <li><strong>Phone:</strong> <a href="tel:+916383679905" style="color: #0d47a1;">+91 63836 79905</a></li>
+            <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/malavikakrishnan30/" target="_blank" style="color: #0d47a1;">linkedin.com/in/malavikakrishnan30</a></li>
         </ul>
+    </section>
 
-        <h2>Experience</h2>
-        <table>
+    <hr style="border: 1px solid #1565c0;">
+
+    <section style="padding: 20px;">
+        <h2 style="color: #1565c0;">Education</h2>
+        <p><strong>B.Tech in Computer Science Engineering</strong><br>
+        Amal Jyothi College of Engineering (2024 - 2028)</p>
+    </section>
+
+    <hr style="border: 1px solid #1565c0;">
+
+    <section style="padding: 20px;">
+        <h2 style="color: #1565c0;">Skills</h2>
+        <table border="1" cellpadding="10" cellspacing="0" style="width: 100%; background-color: #ffffff; border-collapse: collapse;">
             <tr>
-                <th>Job Title</th>
-                <th>Company</th>
-                
+                <td>HTML, CSS, JavaScript</td>
+                <td>Python, Java</td>
             </tr>
             <tr>
-                <td>Frontend Developer Intern</td>
-                <td>ABC Tech</td>
-              
+                <td>Database Management (MySQL)</td>
+                <td>UI/UX Design (Figma, Adobe XD)</td>
             </tr>
         </table>
+    </section>
 
-        <h2>Projects</h2>
+    <hr style="border: 1px solid #1565c0;">
+
+    <section style="padding: 20px;">
+        <h2 style="color: #1565c0;">Experience</h2>
+        <p><strong>Frontend Developer Intern</strong> - ABC Tech</p>
+    </section>
+
+    <hr style="border: 1px solid #1565c0;">
+
+    <section style="padding: 20px;">
+        <h2 style="color: #1565c0;">Projects</h2>
         <ul>
-            <li><b>Knowva:</b> A marketplace for study notes.</li>
-            <li><b>Donna:</b> An expiry tracker for stored products.</li>
+            <li><strong>Knowva:</strong> A marketplace for study notes.</li>
+            <li><strong>Donna:</strong> An expiry tracker for stored products.</li>
         </ul>
-    </div>
+    </section>
+
+    <hr style="border: 1px solid #1565c0;">
+
+    <section style="padding: 20px;">
+        <h2 style="color: #1565c0;">Languages</h2>
+        <ul>
+            <li>English</li>
+            <li>Malayalam</li>
+        </ul>
+    </section>
+
 </body>
-</center>
 </html>
