--- a/4.html
+++ b/4.html
@@ -1,110 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Kottayam</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-image: url('1.jpeg');
-        }
-        header {
-            background: url('kottayam.jpg') center/cover no-repeat;
-            color: white;
-            text-align: center;
-            padding: 60px 20px;
-            font-size: 2.5em;
-            font-weight: bold;
-            text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
-        }
-        nav {
-            display: flex;
-            justify-content: center;
-            background-color:#9e4242;
-            padding: 15px;
-        }
-        nav a {
-            color: white;
-            text-decoration: none;
-            margin: 15px 20px;
-            font-size: 1.2em;
-            font-weight: bold;
-            transition: 0.3s;
-        }
-        nav a:hover {
-            color: #c7a5a5;
-        }
-        .container {
-            max-width: 1100px;
-            margin: 20px auto;
-            padding: 20px;
-            text-align: center;
-        }
-        .section {
-            background: #e8c5c5;
-            padding: 30px;
-            margin-bottom: 20px;
-            border-radius: 10px;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
-        }
-        .section h2 {
-            color: #003366;
-        }
-        .image-gallery {
-            display: flex;
-            justify-content: center;
-            gap: 15px;
-            flex-wrap: wrap;
-        }
-        .image-gallery img {
-            width: 250px;
-            height: 150px;
-            object-fit: cover;
-            border-radius: 10px;
-        }
-      
-    </style>
 </head>
 <body>
-    <header>Welcome to Kottayam</header>
-    <nav>
-        <a href="#about">About</a>
-        <a href="#attractions">Attractions</a>
-        <a href="#culture">Culture</a>
-        <a href="#gallery">Gallery</a>
-        <a href="#contact">Contact</a>
-    </nav>
-    <div class="container">
-        <div class="section" id="about">
-            <h2>About Kottayam</h2>
-            <p>Kottayam, the land of lakes, letters, and latex, is known for its literacy, beautiful backwaters, and lush greenery. It is a major hub of education and publishing in Kerala.</p>
-        </div>
-        <div class="section" id="attractions">
-            <h2>Top Attractions</h2>
-            <ul>
-                <li>Kumarakom Backwaters</li>
-                <li>Illikkal Kallu</li>
-                <li>Thirunakkara Mahadeva Temple</li>
-                <li>Vembanad Lake</li>
-                <li>Poonjar Palace</li>
-            </ul>
-        </div>
-        <div class="section" id="culture">
-            <h2>Culture & Festivals</h2>
-            <p>Kottayam is home to traditional festivals such as Onam, Vishu, and cultural celebrations at temples. It is also famous for its vibrant literature and print media.</p>
-        </div>
-        <div class="section" id="gallery">
-            <h2>Gallery</h2>
-            <div class="image-gallery">
-                <img src="C:\Users\LENOVO\Downloads\kumarakom.jpeg" alt="Kumarakom Backwaters">
-                <img src="illikkal_kallu.jpeg" alt="Illikkal Kallu">
-                <img src="thirunakkara_temple.jpeg" alt="Thirunakkara Temple">
-                <img src="C:\Users\LENOVO\Downloads\vembanad_lake.jpeg" alt="Vembanad Lake">
-            </div>
-        </div>
+    <h1 style="text-align: center;">Welcome to Kottayam</h1>
+    <hr>
+    <div style="text-align: center;">
+        <a href="https://www.google.com/search?q=Kottayam" target="_blank">Home</a> | 
+        <a href="https://www.google.com/search?q=History+of+Kottayam" target="_blank">History</a> | 
+        <a href="https://www.google.com/search?q=Culture+of+Kottayam" target="_blank">Culture</a> | 
+        <a href="https://www.google.com/search?q=Tourist+Spots+in+Kottayam" target="_blank">Tourist Spots</a> | 
+        <a href="https://www.google.com/search?q=Contact+Kottayam" target="_blank">Contact</a>
     </div>
+    <hr>
+
+    <section id="home">
+        <h2>About Kottayam</h2>
+        <p>Kottayam, known as the land of lakes, letters, and latex, is a beautiful town in Kerala, India. It is famous for its high literacy rate, scenic backwaters, and rubber plantations.</p>
+    </section>
+
+    <section id="history">
+        <h2>History of Kottayam</h2>
+        <p>Kottayam has a deep-rooted history in Kerala’s political and literary movements. It was one of the first towns in India to achieve 100% literacy and played a key role in Kerala’s publishing industry.</p>
+    </section>
+
+    <section id="culture">
+        <h2>Culture of Kottayam</h2>
+        <p>The town is known for its vibrant culture, deeply influenced by Malayalam literature, traditional art forms, and Christian heritage. Major festivals like Onam and Vishu are widely celebrated.</p>
+    </section>
+
+    <section id="tourist-spots">
+        
+      <h2 id="gallery" style="text-align: center;">Gallery</h2>
+    <div style="text-align: center;">
+        <img src="kumarakom.jpeg" alt="Kumarakom Backwaters" width="250">
+        <img src="illikkal_kallu.jpeg" alt="Illikkal Kallu" width="250">
+        <img src="thirunakkara_temple.jpeg" alt="Thirunakkara Temple" width="250">
+        <img src="vembanad_lake.jpeg" alt="Vembanad Lake" width="250">
+    </div>
+
+        </ul>
+    </section>
+
+    <section id="contact">
+        <h3>Contact Information</h3>
+        <p>Email: <a href="mailto:info@visitkottayam.com">info@visitkottayam.com</a></p>
+        <p>Phone: <a href="tel:+919876543210">+91 98765 43210</a></p>
+    </section>
+
+    <hr>
+    <p style="text-align: center;">&copy; 2025 Welcome to Kottayam. All rights reserved.</p>
+</body>
+</html>
+
+
    
 </body>
 </html>
